cloudformation/template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Cloudformation template for deploying your own Blobd service.
Parameters:
  Environment:
    Description: The environment for this stack.
    Type: String
    Default: "development"

  VPCCidrBlock:
    Description: The environment for this stack.
    Type: String
    Default: "10.0.0.0/16"

  PublicSubnet1CidrBlock:
    Description: The environment for this stack.
    Type: String
    Default: "10.0.11.0/24"

  PublicSubnet2CidrBlock:
    Description: The environment for this stack.
    Type: String
    Default: "10.0.12.0/24"

  PrivateSubnet1CidrBlock:
    Description: The environment for this stack.
    Type: String
    Default: "10.0.21.0/24"

  PrivateSubnet2CidrBlock:
    Description: The environment for this stack.
    Type: String
    Default: "10.0.22.0/24"

Resources:

  #
  # Network
  #
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidrBlock
      Tags: 
        - Key: Name
          Value: blobd VPC
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: blobd Internet Gateway
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CidrBlock
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name 
          Value: blobd Public Subnet (AZ1)
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  PublicSubnet2: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet2CidrBlock
      MapPublicIpOnLaunch: true
      Tags: 
      - Key: Name 
        Value: blobd Public Subnet (AZ2)
      - Key: Environment
        Value: !Ref Environment
      - Key: Stack-Type
        Value: blobd

  PrivateSubnet1: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet1CidrBlock
      MapPublicIpOnLaunch: false
      Tags: 
      - Key: Name 
        Value: blobd Private Subnet (AZ1)
      - Key: Environment
        Value: !Ref Environment
      - Key: Stack-Type
        Value: blobd

  PrivateSubnet2: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet2CidrBlock
      MapPublicIpOnLaunch: false
      Tags: 
      - Key: Name 
        Value: blobd Private Subnet (AZ2)
      - Key: Environment
        Value: !Ref Environment
      - Key: Stack-Type
        Value: blobd

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties: 
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway1: 
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2: 
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: blobd Public Routes
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  DefaultPublicRoute: 
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: blobd Private Routes (AZ1)
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: blobd Private Routes (AZ2)
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  #
  # DyanmoDB Tables
  #
  BlobsTable:
    DependsOn: BlobsBucket
    Type: "AWS::DynamoDB::Table"
    Properties:
      TableName: !Ref BlobsBucket
      AttributeDefinitions:
        - AttributeName: BlobID
          AttributeType: S
      KeySchema:
        - AttributeName: BlobID
          KeyType: HASH
      ProvisionedThroughput:
        ReadCapacityUnits: 3
        WriteCapacityUnits: 3
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  #
  # S3 buckets
  #
  BlobsBucket:
    Type: "AWS::S3::Bucket"
    Properties: 
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  #
  # Access controls
  #
  Policy:
    Type: "AWS::IAM::ManagedPolicy"
    Properties:
      Description: Allows access to the various resources for this service.
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - "s3:GetObject"
              - "s3:PutObject"
              - "s3:AbortMultipartUpload"
              - "s3:ListMultipartUploadParts"
            Resource:
              - !Sub ["${BucketArn}/*", {"BucketArn": !GetAtt ["BlobsBucket", "Arn"]}]
              - !GetAtt ["BlobsBucket", "Arn"]
          - Effect: Allow
            Action:
              - "dynamodb:UpdateItem"
            Resource:
              - !GetAtt BlobsTable.Arn

  #
  # Services
  #
  ECSServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: ecs-service
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action: ['elasticloadbalancing:DeregisterInstancesFromLoadBalancer', 'elasticloadbalancing:DeregisterTargets', 'elasticloadbalancing:Describe*', 'elasticloadbalancing:RegisterInstancesWithLoadBalancer', 'elasticloadbalancing:RegisterTargets', 'ec2:Describe*', 'ec2:AuthorizeSecurityGroupIngress']
            Resource: '*'

  FargateServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs-tasks.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
        - PolicyName: AmazonECSTaskExecutionRolePolicy
          PolicyDocument:
            Statement:
            - Effect: Allow
              Action:
                - 'ecs:*'

                # Allow the ECS tasks to upload logs to CloudWatch
                - 'logs:CreateLogStream'
                - 'logs:PutLogEvents'
              Resource: '*'

  CloudwatchLogsGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Join ['-', [ECSLogGroup, !Ref 'AWS::StackName']]
      RetentionInDays: 14

  ServiceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security group for ingress to the service containers"
      SecurityGroupIngress:
        IpProtocol: TCP
        FromPort: 5001
        ToPort: 5001
        SourceSecurityGroupId: !GetAtt ["LoadBalancerSecurityGroup", "GroupId"]
      VpcId: !Ref VPC
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  ServiceTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      RequiresCompatibilities:
        - FARGATE
      Cpu: 256
      Family: Service
      Memory: 0.5GB
      NetworkMode: awsvpc
      ExecutionRoleArn: !Ref FargateServiceRole
      ContainerDefinitions:
        - Name: blobd
          Essential: true
          Image: "bradhe/blobd:latest"
          Command:
            - "/blobd"
            - "-listen-addr=0.0.0.0:5001"
            - !Sub "-storage-url=s3://${BlobsBucket}/${Environment}/temp"
            - !Sub "-metadata-url=dynamodb://${BlobsTable}"
          PortMappings:
            - ContainerPort: 5001
              HostPort: 5001
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref 'CloudwatchLogsGroup'
              awslogs-region: !Ref 'AWS::Region'
              awslogs-stream-prefix: blobd

  ServiceCluster:
    Type: "AWS::ECS::Cluster"

  ServiceService:
    Type: AWS::ECS::Service
    DependsOn: ServiceLoadBalancer
    Properties:
      Cluster: !Ref ServiceCluster
      LaunchType: FARGATE
      DeploymentConfiguration:
        MaximumPercent: 200
      DesiredCount: 1
      #Role: !Ref ECSServiceRole
      NetworkConfiguration:
        AwsvpcConfiguration: 
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref ServiceSecurityGroup
          Subnets:
            - !Ref PrivateSubnet1
            - !Ref PrivateSubnet2
      TaskDefinition: !Ref ServiceTaskDefinition
      LoadBalancers:
        - ContainerName: blobd
          ContainerPort: 5001
          TargetGroupArn: !Ref ServiceTargetGroup

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub "Allows inbound traffic from the Internet to ${AWS::StackName}."
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  ServiceLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Type: application
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Stack-Type
          Value: blobd

  ServiceTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 6
      HealthCheckPath: /_status
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      TargetType: ip
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref VPC

  ServiceHTTPLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ServiceTargetGroup
      LoadBalancerArn: !Ref ServiceLoadBalancer
      Port: 80
      Protocol: HTTP

      #  ServiceHTTPSLoadBalancerListener:
      #    Type: AWS::ElasticLoadBalancingV2::Listener
      #    Properties:
      #      DefaultActions:
      #        - Type: forward
      #          TargetGroupArn: !Ref ServiceTargetGroup
      #      LoadBalancerArn: !Ref ServiceLoadBalancer
      #      Port: 443
      #      Protocol: HTTPS
